--- a/assets/css/pages/Home.css
+++ b/assets/css/pages/Home.css
@@ -1,1 +1,14 @@
  /* home */
+
+ .home{
+  background: hsla(68, 61%, 68%, 1);
+  background: radial-gradient(circle, hsla(68, 61%, 68%, 1) 0%, hsla(45, 100%, 76%, 1) 100%);
+  background: -moz-radial-gradient(circle, hsla(68, 61%, 68%, 1) 0%, hsla(45, 100%, 76%, 1) 100%);
+  background: -webkit-radial-gradient(circle, hsla(68, 61%, 68%, 1) 0%, hsla(45, 100%, 76%, 1) 100%);
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#D2DF7B", endColorstr="#FFE185", GradientType=1 );
+  height: 100vh;
+ }
+ 
+ .home nav img {
+  width: 20em;
+ }
