--- a/assets/css/apps/note/cmps/NoteAddEdit.css
+++ b/assets/css/apps/note/cmps/NoteAddEdit.css
@@ -62,7 +62,36 @@
     display: flex;
     justify-content: end;
   }
+  .accordion-buttons .color-palette{
+    
+  }
 
+.color-palette {
+  display: flex;
+  gap: 10px;
+  padding: 10px; 
+  background-color: #f4f4f4; 
+  border-radius: 8px; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+  position: absolute; 
+  z-index: 100; 
+  bottom: 20px;
+  left: 25px; 
+}
+
+.color-option {
+  width: 30px; 
+  height: 30px; 
+  border-radius: 50%; 
+  cursor: pointer; 
+  transition: transform 0.2s ease; 
+  border: 2px solid transparent; 
+}
+
+.color-option:hover {
+  transform: scale(1.2); 
+  border: 2px solid #fff; 
+}
 
 /***************************************************************************************************************************************************************************************************************************************************/
 
