--- a/assets/css/apps/note/cmps/NoteAddEdit.css
+++ b/assets/css/apps/note/cmps/NoteAddEdit.css
@@ -1,4 +1,4 @@
-.note-add{
+.note-add {
   margin-top: 20px;
 }
 
@@ -12,151 +12,183 @@
   outline: none;
 }
 .note-accordion.accordion-open {
-    border: 1px solid var(--clr-note-border);
-    border-radius: 15px;
-    box-shadow: 0 1em 1em rgba(0, 0, 0, 1);
-    height: fit-content;
-  }
-  
+  border: 1px solid var(--clr-note-border);
+  border-radius: 15px;
+  box-shadow: 0 1em 1em rgba(0, 0, 0, 1);
+  height: fit-content;
+}
 
-  
-  .accordion-text {
-    color: white;
-    border: none;
-    font-size: 1.3em;
-    height: auto; 
-    overflow-wrap: break-word;
-    word-break: break-word;
-    background-color: transparent;
-    resize: none; /* Prevent manual resizing */
-    box-sizing: border-box;
-    padding: 10px;
-  }
-  
-  .accordion-title,
-  .accordion-text {
-    user-select: none;
-  }
-  .accordion-header{
-    display: flex;
-    align-items: center;
-    border: 1px solid var(--clr-note-border);
-    border-radius: 15px;
-    box-shadow: 0 1em 1em rgba(0, 0, 0, 1);
-  }
-  .accordion-header.active{
-    border: none;
-    box-shadow: none;
-    justify-content: space-between;
-  }
- 
-  .icon-container span{
-    margin-right: 2.5em;
-    color: var(--clr-note-border);
-  }
-  
-  .accordion-body {
-    padding: 10px;
-  }
-  .accordion-buttons{
-    display: flex;
-    justify-content: end;
-  }
-  .accordion-buttons .color-palette{
-    
-  }
+.accordion-text {
+  color: white;
+  border: none;
+  font-size: 1.3em;
+  height: auto;
+  overflow-wrap: break-word;
+  word-break: break-word;
+  background-color: transparent;
+  resize: none;
+  box-sizing: border-box;
+  padding: 10px;
+}
+
+.accordion-title,
+.accordion-text {
+  user-select: none;
+}
+.accordion-header {
+  display: flex;
+  align-items: center;
+  border: 1px solid var(--clr-note-border);
+  border-radius: 15px;
+  box-shadow: 0 1em 1em rgba(0, 0, 0, 1);
+}
+.accordion-header.active {
+  border: none;
+  box-shadow: none;
+  justify-content: space-between;
+}
+
+.icon-container span {
+  margin-right: 2.5em;
+  color: var(--clr-note-border);
+}
+
+.accordion-body {
+  padding: 10px;
+}
+.accordion-body input{
+  border: var(--clr-note-border) 1px solid;
+  border-radius: 10px;
+  padding: 0.5em 1em;
+  background-color: transparent;
+  margin-left: 0.7em;
+}
+.accordion-buttons {
+  display: flex;
+  justify-content: end;
+}
+.accordion-buttons button {
+  border: none;
+  background-color: transparent;
+  color: white;
+  font-size: 2em;
+}
 
 .color-palette {
   display: flex;
   gap: 10px;
-  padding: 10px; 
-  background-color: #f4f4f4; 
-  border-radius: 8px; 
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-  position: absolute; 
-  z-index: 100; 
+  padding: 10px;
+  background-color: #f4f4f4;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  position: absolute;
+  z-index: 100;
   bottom: 20px;
-  left: 25px; 
+  left: 25px;
 }
 
 .color-option {
-  width: 30px; 
-  height: 30px; 
-  border-radius: 50%; 
-  cursor: pointer; 
-  transition: transform 0.2s ease; 
-  border: 2px solid transparent; 
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+  border: 2px solid transparent;
 }
 
 .color-option:hover {
-  transform: scale(1.2); 
-  border: 2px solid #fff; 
+  transform: scale(1.2);
+  border: 2px solid #fff;
+}
+.image-url-input {
+  border: var(--clr-note-border) 1px solid;
+  border-radius: 10px;
+  padding: 0.5em 1em;
+  background-color: transparent;
+  margin-left: 0.7em;
+}
+.div-todos{
+  display: grid;
+  grid-auto-flow: row;
+}
+.div-todos input{
+  margin-bottom: 10px;
+  padding: 1em;
+  color: white;
+}
+.div-todos button{
+  justify-self: end;
+  margin: 10px 5px;
+  border: var(--clr-note-border) 1px solid;
+  border-radius: 15px;
+  background-color: transparent;
+  color: white;
+  padding: 1em;
 }
 
 /***************************************************************************************************************************************************************************************************************************************************/
 
-  .note-edit-wrapper {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 30%; 
-    z-index: 1000;
-  }
-  
-  
-  
-  .note-accordion-edit{
-    display: grid;
-    grid-auto-rows: auto 1fr auto;
-    gap: 2em;
-    padding: 1.5em;
-    width: 40em;
-    box-shadow: 0 0.1em 1em rgba(0, 0, 0, 1);
-    border: var(--clr-note-border) 1px solid;
-    border-radius: 10px;
-    height: fit-content;
-  }
-  
-  .note-accordion-edit textarea, 
-  .note-accordion-edit input[type="text"] {
-    background-color: transparent;
-    user-select: none;
-    color: white;
-    outline: none;
-    border: var(--clr-note-border) 1px solid ;
-    border-radius: 15px;
+.note-edit-wrapper {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 30%;
+  z-index: 1000;
+}
 
-    resize: none;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 1em;
-    padding :1em;
-  }
-  
-  .note-accordion-edit input[name="title"]{
-    font-weight: bold;
-    font-size: 1.3em;
-  }
+.note-accordion-edit {
+  display: grid;
+  grid-auto-rows: auto 1fr auto;
+  gap: 2em;
+  padding: 1.5em;
+  width: 40em;
+  box-shadow: 0 0.1em 1em rgba(0, 0, 0, 1);
+  border: var(--clr-note-border) 1px solid;
+  border-radius: 10px;
+  height: fit-content;
+}
 
-  .note-accordion-edit img {
-    border: rgba(255, 255, 255, 0.267) 1px solid;
-    border-radius: 15px;
-  }
+.note-accordion-edit textarea,
+.note-accordion-edit input[type="text"] {
+  background-color: transparent;
+  user-select: none;
+  color: white;
+  outline: none;
+  border: var(--clr-note-border) 1px solid;
+  border-radius: 15px;
 
-  .color-input{
-    display: none;
-  }
+  resize: none;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 1em;
+  padding: 1em;
+}
 
-  .note-accordion-edit button , label{
-    border: none;
-    background-color: transparent;
-    color: white;
-    font-size: 1.5em;
-  }
-  .note-buttons {
-    gap: 2em;
-    display: flex;
-    justify-content: flex-end;
-    padding-top: 1em;
-  }
-  
+.note-accordion-edit input[name="title"] {
+  font-weight: bold;
+  font-size: 1.3em;
+}
+
+.note-accordion-edit img {
+  border: rgba(255, 255, 255, 0.267) 1px solid;
+  border-radius: 15px;
+}
+
+.color-input {
+  display: none;
+}
+
+.note-accordion-edit button,
+label {
+  border: none;
+  background-color: transparent;
+  color: white;
+  font-size: 1.5em;
+}
+.note-buttons {
+  gap: 2em;
+  display: flex;
+  justify-content: flex-end;
+  padding-top: 1em;
+}
