--- a/assets/css/apps/note/cmps/NoteList.css
+++ b/assets/css/apps/note/cmps/NoteList.css
@@ -31,11 +31,21 @@
 }
 
 .note-item ul {
-  padding-left: em;
+  padding-left: 1.4em;
 }
 
 .note-item ul li:not(:last-child){
   margin-bottom: 0.6em;
+}
+
+.note-item iframe{
+  margin-top: 10px;
+  border: none;
+  border-radius: 15px;
+}
+
+.note-item h3 , p{
+  margin-left: 5px;
 }
 
 
