--- a/assets/css/apps/mail/cmps/Header.css
+++ b/assets/css/apps/mail/cmps/Header.css
@@ -1,12 +1,91 @@
+.mail-index .mobile-header {
+    width: calc(100vw - 2em);
+    margin: 1em;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 4.5625em;
+    padding: 1em;
+    grid-row: 1;
+    grid-column: 1/-1;
+    box-shadow: inset 1px 0 0 #dadce0, inset -1px 0 0 #dadce0, 0 1px 2px 0 rgba(60, 64, 67, .3), 0 1px 3px 1px rgba(60, 64, 67, .15);
+}
+
+.mail-index .mobile-header.hidden {
+    display: none;
+}
+
+.mail-index .mobile-header img {
+    width: 1.875em;
+    height: 1.875em;
+    border-radius: 50%;
+}
+
+.mail-index .mobile-header svg {
+    width: 1.875em;
+    height: 1.875em;
+}
+
+.mail-index .mobile-header .search-bar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    height: 3em;
+    padding: 0.875em 2.75em;
+    padding-right: 0.5em;
+
+    border: none;
+    outline: none;
+
+    width: 100%;
+}
+
+.mail-index .mobile-header input {
+    font-size: 1rem;
+    border: none;
+    outline: none;
+    width: 80%;
+}
+
+.mail-index .mobile-header button {
+    font-size: 1rem;
+
+    border: none;
+    outline: none;
+    border-radius: 50%;
+
+    width: 1.875em;
+    height: 1.875em;
+    background: none;
+
+    cursor: pointer;
+    transition: 0.2s;
+}
+
+.mail-index .mobile-header button.active {
+    font-size: 1rem;
+
+    border: none;
+    outline: none;
+    border-radius: 50%;
+    background: var(--clr-search-bar-shadow-read-filter);
+
+    width: 1.875em;
+    height: 1.875em;
+}
+
+
 .mail-index .mail-index-header {
     grid-row: 1;
     grid-column: 1/-1;
 
-    display: flex;
+    display: none;
     align-items: center;
-    height: 63px;
+    height: 4.5625em;
     padding: 0.5em;
     background-color: var(--clr-bg-side-bar);
+
 }
 
 .mail-index .mail-index-header .burger-and-logo {
@@ -14,7 +93,6 @@
     align-items: center;
     padding: 0 1.875em 0 0;
     height: 3em;
-
 }
 
 .mail-index .mail-index-header .dots-and-account {
