--- a/assets/css/apps/mail/cmps/MailList.css
+++ b/assets/css/apps/mail/cmps/MailList.css
@@ -2,22 +2,24 @@
 
 
  .mail-list {
+     margin-top: 2em;
      width: 100%;
      overflow-y: hidden;
-     border-radius: 1em;
-     height: calc(100vh - 63px);
+     height: calc(100vh - 3.9375em);
      margin-bottom: 1em;
+     padding-bottom: 5em;
      transition: 0.4s;
  }
-
 
  .mail-list .sorting-container {
      display: flex;
      align-items: center;
+     justify-content: center;
      gap: 1.3em;
      padding-left: 1em;
      height: 3em;
-     background-color: var(--clr-mail);
+
+     background-color: var(--clr-bg-side-bar);
 
      box-shadow: inset 0 -1px 0 0 rgba(100, 121, 143, 0.12);
  }
@@ -51,13 +53,14 @@
  .mail-list ul li {
      display: flex;
      align-items: center;
+     position: relative;
 
      line-height: 20px;
 
      font-size: 1rem;
      padding: 0 1em;
 
-     height: 40px;
+     height: 5em;
      cursor: pointer;
 
      box-shadow: inset 0 -1px 0 0 rgba(100, 121, 143, 0.12);
@@ -87,31 +90,30 @@
  .mail-list ul li.draft h2 {
      color: red;
      font-weight: 300;
-
  }
 
  .mail-list ul li h2 {
+     position: absolute;
+     top: 20px;
+     left: 60px;
+     max-width: 10em;
      font-size: 0.875em;
-     min-width: 12em;
 
      text-overflow: ellipsis;
      overflow: hidden;
      white-space: nowrap;
-
-     margin-right: 2.2857em;
  }
 
  .mail-list ul li h3 {
      font-size: 0.875em;
-
+     position: absolute;
+     top: 50px;
+     left: 60px;
+     max-width: 70%;
 
      text-overflow: ellipsis;
      overflow: hidden;
      white-space: nowrap;
-     padding-right: 0.714286em;
-
-     margin-right: auto;
-
  }
 
 
@@ -121,6 +123,9 @@
  }
 
  .mail-list ul li h4 {
+     position: absolute;
+     top: 30px;
+     right: 20px;
      display: flex;
      justify-content: flex-end;
      align-items: center;
@@ -201,15 +206,9 @@
  .mail-list ul li .tool-bar i:hover {
      background-color: var(--clr-mail-list-btn-shadow);
      border-radius: 50%;
-
-
  }
 
  .mail-list ul li:hover .tool-bar {
-     display: flex;
- }
-
- .mail-list ul li:hover h4 {
      display: none;
  }
 
