--- a/assets/css/apps/mail/cmps/NewCompose.css
+++ b/assets/css/apps/mail/cmps/NewCompose.css
@@ -1,13 +1,10 @@
 .new-compose {
-    width: 550px;
+    width: 100%;
     position: fixed;
-    bottom: 0;
-    right: 1.5em;
+    inset: 0;
     z-index: 9;
     background-color: white;
-    box-shadow:
-        rgba(0, 0, 0, 0.14) 0px 8px 10px 1px, rgba(0, 0, 0, 0.12) 0px 3px 14px 2px, rgba(0, 0, 0, 0.2) 0px 5px 5px -3px;
-    border-radius: 8px 8px 0px 0px;
+
 }
 
 .new-compose .title-and-exit {
@@ -20,6 +17,7 @@
 
     height: 40px;
     width: 100%;
+
 }
 
 .new-compose .title-and-exit .buttons {
@@ -56,13 +54,17 @@
 
     color: var(--clr-compose-header);
     margin: 0 0 0 16px;
+
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
 }
 
 .new-compose form {
     display: flex;
     flex-direction: column;
 
-    height: 560px;
+    height: 100%;
     width: 100%;
 
     padding: 0 1em;
@@ -119,7 +121,7 @@
 
     font-weight: 400;
     padding: 10px 0;
-    height: 100%;
+    height: 75%;
     border: none;
     outline: none;
     box-shadow:
