--- a/assets/css/apps/mail/pages/MailIndex.css
+++ b/assets/css/apps/mail/pages/MailIndex.css
@@ -2,24 +2,81 @@
 
  .mail-index {
      display: grid;
-     grid-template-rows: 63px 1fr;
+     grid-template-rows: 3.9375em 1fr;
      grid-template-columns: 1fr;
-     background-color: var(--clr-bg-side-bar);
+     background-color: white;
      height: 100vh;
      overflow: hidden;
+     font-family: "Google Sans", Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
  }
 
 
  .mail-index .mail-index-body {
      display: grid;
-     grid-template-columns: 73px 1fr;
-
+     grid-template-columns: 1fr;
      line-height: 20px;
-     font-family: "Google Sans", Roboto, RobotoDraft, Helvetica, Arial, sans-serif;
-
      transition: 0.2s;
  }
 
- .mail-index:has(.side-bar.open) .mail-index-body {
-     grid-template-columns: 256px 1fr;
+
+
+ .mobile-backdrop {
+     display: none;
+ }
+
+ .mobile-backdrop.open {
+     display: block;
+     position: fixed;
+     z-index: 2;
+     inset: 0;
+     background-color: rgba(97, 97, 97, 0.346);
+ }
+
+ .new-compose-mobile {
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     position: fixed;
+     bottom: 70px;
+     left: 20px;
+     height: 50px;
+     background-color: white;
+     color: red;
+     border-radius: 9999px;
+     z-index: 1;
+     padding: 0 1em;
+     box-shadow:
+         rgba(0, 0, 0, 0.14) 0px 8px 10px 1px, rgba(0, 0, 0, 0.12) 0px 3px 14px 2px, rgba(0, 0, 0, 0.2) 0px 5px 5px -3px;
+
+ }
+
+ .mobile-navigator {
+     display: flex;
+     justify-content: space-evenly;
+     align-items: center;
+     position: fixed;
+     bottom: 0px;
+     left: 0px;
+     right: 0;
+     height: 50px;
+     background-color: white;
+     /* border-radius: 9999px; */
+     z-index: 1;
+     box-shadow:
+         rgba(0, 0, 0, 0.14) 0px 8px 10px 1px, rgba(0, 0, 0, 0.12) 0px 3px 14px 2px, rgba(0, 0, 0, 0.2) 0px 5px 5px -3px;
+     overflow: hidden;
+ }
+
+ .mobile-navigator i {
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     width: 100%;
+     height: 100%;
+     /* padding: 2em 2em; */
+     border-left: 1px solid lightgray;
+ }
+
+ .mobile-navigator i:nth-child(2) {
+     background-color: rgba(199, 199, 199, 0.46);
  }
