--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -10,7 +10,7 @@
 /* @import './basics/layout.css'; */
 
 /* Pages */
-@import "./pages/home.css";
+@import "./pages/Home.css";
 
 /* @import './apps/note/pages/NoteIndex.css'; */
 
