--- a/assets/css/apps/mail/pages/MailIndex.css
+++ b/assets/css/apps/mail/pages/MailIndex.css
@@ -61,7 +61,7 @@
      height: 50px;
      background-color: white;
      /* border-radius: 9999px; */
-     z-index: 1;
+     z-index: 5;
      box-shadow:
          rgba(0, 0, 0, 0.14) 0px 8px 10px 1px, rgba(0, 0, 0, 0.12) 0px 3px 14px 2px, rgba(0, 0, 0, 0.2) 0px 5px 5px -3px;
      overflow: hidden;
@@ -77,6 +77,6 @@
      border-left: 1px solid lightgray;
  }
 
- .mobile-navigator i:nth-child(2) {
+ .mobile-navigator i.active {
      background-color: rgba(199, 199, 199, 0.46);
  }
