--- a/assets/css/apps/mail/cmps/MailDetails.css
+++ b/assets/css/apps/mail/cmps/MailDetails.css
@@ -1,5 +1,6 @@
 .mail-details {
-    position: relative;
+    position: absolute;
+    top: 0;
     z-index: 6;
     width: 100%;
     border-radius: 1em;
