--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,5 +1,4 @@
 /* Setup */
-
 @import "./setup/variables.css";
 /* @import './setup/fonts.css'; */
 
@@ -30,5 +29,6 @@
 @import "./apps/mail/cmps/Header.css";
 @import "./apps/mail/cmps/MailDetails.css";
 
+@import "./cmps/mqNote.css";
 
 @import "./cmps/AppNavigator.css";
