--- a/assets/css/apps/note/cmps/NoteAddEdit.css
+++ b/assets/css/apps/note/cmps/NoteAddEdit.css
@@ -134,7 +134,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 30%;
-  z-index: 1000;
+  z-index: 1100;
 }
 
 .note-accordion-edit {
@@ -191,4 +191,18 @@ label {
   display: flex;
   justify-content: flex-end;
   padding-top: 1em;
+}
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
+  z-index: 1000; /* Ensure it covers everything */
+}
+
+.disable-pointer {
+  pointer-events: none;
 }
