--- a/assets/css/apps/note/cmps/NoteAddEdit.css
+++ b/assets/css/apps/note/cmps/NoteAddEdit.css
@@ -157,7 +157,6 @@
   outline: none;
   border: var(--clr-note-border) 1px solid;
   border-radius: 15px;
-
   resize: none;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -199,8 +198,8 @@ label {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent black */
-  z-index: 1000; /* Ensure it covers everything */
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1000; 
 }
 
 .disable-pointer {
