--- a/assets/css/apps/mail/pages/MailIndex.css
+++ b/assets/css/apps/mail/pages/MailIndex.css
@@ -67,6 +67,10 @@
      overflow: hidden;
  }
 
+ .mobile-navigator.hidden {
+     display: hidden;
+ }
+
  .mobile-navigator i {
      display: flex;
      align-items: center;
