--- a/assets/css/apps/mail/pages/MailIndex.css
+++ b/assets/css/apps/mail/pages/MailIndex.css
@@ -43,8 +43,9 @@
      background-color: white;
      color: red;
      border-radius: 9999px;
-     z-index: 1;
+     z-index: 3;
      padding: 0 1em;
+     cursor: pointer;
      box-shadow:
          rgba(0, 0, 0, 0.14) 0px 8px 10px 1px, rgba(0, 0, 0, 0.12) 0px 3px 14px 2px, rgba(0, 0, 0, 0.2) 0px 5px 5px -3px;
 
