--- a/assets/css/apps/note/cmps/NoteList.css
+++ b/assets/css/apps/note/cmps/NoteList.css
@@ -1,6 +1,7 @@
 .note-list {
   column-count: 5;
   column-gap: 1em;
+  margin-bottom: 60px;
   padding: 2em 4em 1em 4em;
 }
 
@@ -42,7 +43,8 @@
   border-radius: 15px;
 }
 
-.note-item h3, p {
+.note-item h3,
+p {
   margin-left: 5px;
 }
 
@@ -55,10 +57,11 @@
   gap: 5px;
 }
 
-.pinInAdd{
+.pinInAdd {
   display: none;
 }
-.note-item:hover .pinInAdd{
+
+.note-item:hover .pinInAdd {
   position: absolute;
   top: 15px;
   right: 10px;
@@ -109,25 +112,29 @@
   cursor: pointer;
 }
 
-.todo-item{
+.todo-item {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 .todo-item.completed {
-  text-decoration: line-through; 
-  color: gray;              
+  text-decoration: line-through;
+  color: gray;
 }
-.todo-toggle{
+
+.todo-toggle {
   margin-left: 1em;
   font-size: 1em;
 }
+
 .todo-delete {
   cursor: pointer;
-  color: white;  
+  color: white;
   margin-left: 0.2em;
 }
-.before-li{
+
+.before-li {
   font-weight: bold;
   font-size: 1.4em;
   margin-right: 0.2em;
