Add part of books and fix filter

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5,11 +5,31 @@
 /* Basics */
 
 @import "./basics/base.css";
-@import "./basics/helpers.css";
 /* @import './basics/layout.css'; */
+/* Setup */
+
+
+
+@import './apps/books/assets/style/base/base.css';
+@import './apps/books/assets/style/base/layout.css';
+@import '/apps/books/assets/style/components/app-header.css';
+@import '/apps/books/assets/style/components/books.css';
+@import '/apps/books/assets/style/setup/mq.css';
+@import '/apps/books/assets/style/setup/vars.css';
+
+
+
+
+/* Base */
+
+/* Components */
+
+
+
+/* mq */
+
 
 /* Pages */
-
 /* @import './apps/note/pages/NoteIndex.css'; */
 
 @import "./apps/mail/pages/MailIndex.css";
