--- a/apps/books/assets/style/components/books.css
+++ b/apps/books/assets/style/components/books.css
@@ -1,3 +1,28 @@
+.books-index .navigator-container {
+    display: flex;
+    justify-content: flex-end;
+    background: var(--clr-font-7);
+}
+
+
+.books-index .dots {
+    display: none;
+    align-items: center;
+    width: 1.5em;
+    padding: 0.5em;
+
+    border-radius: 50%;
+
+    color: white;
+    width: 2.5em;
+    height: 2.5em;
+    background: none;
+
+    cursor: pointer;
+}
+
+
+
 .books-index a {
     grid-column: 1/-1;
     grid-row: 4;
@@ -6,7 +31,7 @@
     justify-content: center;
     align-items: center;
 
-    border-radius: 0.6em;
+    /* border-radius: 0.6em; */
     text-decoration: none;
 
     background: var(--clr-font-7);
@@ -37,7 +62,7 @@
     background-color: var(--clr-font-7);
     color: var(--clr-font-1);
 
-    border-radius: 0.6em;
+    /* border-radius: 0.6em; */
     padding: 1em;
 }
 
