--- a/assets/css/apps/note/cmps/NoteAddEdit.css
+++ b/assets/css/apps/note/cmps/NoteAddEdit.css
@@ -205,3 +205,8 @@ label {
 .disable-pointer {
   pointer-events: none;
 }
+.note-accordion-edit .todo-add-button{
+  border: 1px solid white;
+  border-radius: 100px;
+  margin-top: 10px;
+}
