--- a/apps/books/assets/style/components/books.css
+++ b/apps/books/assets/style/components/books.css
@@ -89,8 +89,6 @@
 .books-index .book-list {
     grid-column: 1/-1;
     grid-row: 5;
-
-
 }
 
 .books-index .book-list ul {
@@ -98,13 +96,13 @@
     grid-template-columns: 1fr;
     grid-auto-rows: auto;
     grid-gap: 1rem;
+    padding: 0 5px;
 }
 
 .books-index .book-list ul li {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-
     padding: 1em;
     background-color: rgba(245, 244, 244, 0.762);
 
