--- a/assets/css/apps/mail/cmps/MailDetails.css
+++ b/assets/css/apps/mail/cmps/MailDetails.css
@@ -138,7 +138,8 @@
     margin-right: auto;
 }
 
-.mail-details .body-details h4 {
+.mail-details .body-details pre {
     grid-column: 2;
     grid-row: 3;
+    font-family: "Google Sans", Roboto, RobotoDraft, Helvetica, Arial, sans-serif
 }
